# volosti-common

./: README.rst  pyproject.toml
tests/: test_schemas.py
volosti_common/common/: schemas.py
volosti_common/person/: dataclasses.py  queries.py  regexps.py  schemas.py  typedefs.py
